// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should add new field to view and remove it from the payload before submission 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-15"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.address"
                      >
                        Street Address
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.address"
                          id="userProfile.address"
                          name="userProfile.address"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-47"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-49"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-50"
                  >
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-15"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_11"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-55"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom error message and prevent submission when failure is triggered in preSubmit callback 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      This is my custom global message
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-17"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-describedby=" userProfile.lastName-error  "
                          aria-invalid="true"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-28"
                          data-se="userProfile.lastName-error"
                          id="userProfile.lastName-error"
                          role="alert"
                        >
                          Custom preSubmit error
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-48"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-50"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-51"
                  >
                    <div
                      class="MuiBox-root emotion-52"
                    >
                      <div
                        class="MuiBox-root emotion-16"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_10"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-52"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-56"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom field level error message and custom global message on page load 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      This is my custom global message
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-17"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-describedby=" userProfile.lastName-error  "
                          aria-invalid="true"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-28"
                          data-se="userProfile.lastName-error"
                          id="userProfile.lastName-error"
                          role="alert"
                        >
                          Custom parseSchema error
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-48"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-50"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-51"
                  >
                    <div
                      class="MuiBox-root emotion-52"
                    >
                      <div
                        class="MuiBox-root emotion-16"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_10"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-52"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-56"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show generic error message and prevent updated view rendering when failure is triggered in postSubmit callback 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      We could not process your registration at this time. Please try again later.
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-17"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-46"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-48"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-49"
                  >
                    <div
                      class="MuiBox-root emotion-50"
                    >
                      <div
                        class="MuiBox-root emotion-16"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_10"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-50"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-54"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show validation error messages on all fields when submitted without completing required fields 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      We found some errors. Please review the form and make corrections.
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-14"
                >
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-17"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-describedby=" userProfile.lastName-error  "
                          aria-invalid="true"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-28"
                          data-se="userProfile.lastName-error"
                          id="userProfile.lastName-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-describedby=" userProfile.firstName-error  "
                          aria-invalid="true"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-28"
                          data-se="userProfile.firstName-error"
                          id="userProfile.firstName-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-describedby=" userProfile.email-error  "
                          aria-invalid="true"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-28"
                          data-se="userProfile.email-error"
                          id="userProfile.email-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-describedby=" userProfile.login-error  "
                          aria-invalid="true"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-28"
                          data-se="userProfile.login-error"
                          id="userProfile.login-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-23"
                        data-shrink="false"
                        for="userProfile.address"
                      >
                        Street Address
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-24"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-25"
                        required="true"
                      >
                        <input
                          aria-describedby=" userProfile.address-error  "
                          aria-invalid="true"
                          class="MuiInputBase-input emotion-26"
                          data-se="userProfile.address"
                          id="userProfile.address"
                          name="userProfile.address"
                          required=""
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-28"
                          data-se="userProfile.address-error"
                          id="userProfile.address-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-62"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-64"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-65"
                  >
                    <div
                      class="MuiBox-root emotion-66"
                    >
                      <div
                        class="MuiBox-root emotion-16"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-20"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_11"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-66"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-70"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
